--- a/zombiecheat/zombiecheat.vcxproj
+++ b/zombiecheat/zombiecheat.vcxproj
@@ -138,6 +138,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="main.h" />
     <ClInclude Include="offsets.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
